# cole_cli

./: Cargo.toml  README.md  out.txt  project_notes.txt  test_file_2.txt  test_file_3.txt
scripts/: temp_dummy_script.sh
src/: lib.rs  main.rs  parser.rs
src/cli/: args.rs
src/commands/: dir_info.rs  generate.rs  mod.rs  num_lines.rs  print.rs
src/models/: config.rs  mod.rs  testuser.rs
src/services/: env_service.rs  file_service.rs  mod.rs  user_service.rs
tests/: cli.rs
tests/expected/: long_ass_file.txt.out  test_file_2.txt.out  test_file_2_nums.txt.out
tests/inputs/text_files/: test_file_4.txt
tests/text_files/: test_file_1.txt  test_file_3.txt
