[package]
name = "cole_cli"
version = "0.2.0"
edition = "2024"
description = "A compact, jack-of-all trades command line tool. Because Rust is neat."

[[bin]]
name="cole_cli"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.103"
assert_cmd = "2.2.2"
clap = { version = "4.6.1", features = ["derive"] }
owo-colors = "4.3.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
